fix: fix exam card overflow issues

--- a/website/src/assets/main.css
+++ b/website/src/assets/main.css
@@ -10,6 +10,7 @@ body {
     word-wrap: break-word;
     margin: 0;
     padding: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 
 #app {
